@@ -6,6 +6,7 @@ Compact Forms x.x-x.x, xxxx-xx-xx
 
 Compact Forms 6.x-1.x, xxxx-xx-xx
 ---------------------------------
+#251421 by sun: Fixed multiple forms with same ID are not compacted.
 
 
 Compact Forms 6.x-1.2, 2009-05-06
